[package]
name = "music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git" , features = ["tokio", "advanced", "image"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
rodio = { version = "0.17.3", features = ["symphonia-all"] }
rusty_ytdl = "0.7.1"
tokio = {version = "1.21.2", features = ["sync", "fs"] }
image = "0.25.1"