[package]
name = "wavey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git" , features = ["tokio", "advanced", "image"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
rodio = "0.18"
rusty_ytdl = "0.7.2"
tokio = {version = "1.21.2", features = ["sync", "fs"] }
image = "0.25.1"
reqwest = "0.11"
serde_json = "1.0.117"
log = "0.4"
log4rs = "1"
rfd = "0.12"
discord-presence = "1.2"

[workspace]
members = [
    "updater"
]