[package]
name = "wavey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = [
    "tokio",
    "advanced",
    "image"
] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
rodio = "0.19.0"
rusty_ytdl = "0.7.3"
tokio = { version = "1.38.0", features = ["sync", "fs"] }
image = "0.25.1"
reqwest = "0.12.5"
serde_json = "1.0.120"
log = "0.4"
log4rs = "1"
rfd = "0.14.1"
discord-presence = "1.2"
